Replace deprecated JVM option with new option